--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "release": "npmpub",
     "pretest": "npm run lint",
     "prepublish": "npm run build",
-    "prebuild": "npm run build:clean && npm run test",
     "build:clean": "npm run test:clean && rimraf ./dist",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --copy-files",
     "build:umd": "cross-env BABEL_ENV=commonjs NODE_ENV=development webpack --config ./internals/webpack/webpack.config.js ./lib/index.js --progress",
@@ -125,59 +124,58 @@
     "promise-to-callback": "^1.0.0"
   },
   "devDependencies": {
-    "babel-cli": "6.18.0",
-    "babel-core": "6.18.2",
-    "babel-eslint": "7.1.0",
-    "babel-loader": "6.2.8",
-    "babel-plugin-check-es2015-constants": "6.8.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.2.2",
+    "babel-plugin-check-es2015-constants": "6.22.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-es2015-arrow-functions": "6.8.0",
-    "babel-plugin-transform-es2015-block-scoped-functions": "6.8.0",
-    "babel-plugin-transform-es2015-block-scoping": "6.18.0",
-    "babel-plugin-transform-es2015-classes": "6.18.0",
-    "babel-plugin-transform-es2015-computed-properties": "6.8.0",
-    "babel-plugin-transform-es2015-destructuring": "6.19.0",
-    "babel-plugin-transform-es2015-for-of": "6.18.0",
-    "babel-plugin-transform-es2015-function-name": "6.9.0",
-    "babel-plugin-transform-es2015-literals": "6.8.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.18.0",
-    "babel-plugin-transform-es2015-object-super": "6.8.0",
-    "babel-plugin-transform-es2015-parameters": "6.18.0",
-    "babel-plugin-transform-es2015-shorthand-properties": "6.18.0",
-    "babel-plugin-transform-es2015-spread": "6.8.0",
-    "babel-plugin-transform-es2015-sticky-regex": "6.8.0",
-    "babel-plugin-transform-es2015-template-literals": "6.8.0",
-    "babel-plugin-transform-es2015-unicode-regex": "6.11.0",
-    "babel-plugin-transform-es3-member-expression-literals": "6.5.0",
-    "babel-plugin-transform-es3-property-literals": "6.5.0",
-    "babel-plugin-transform-object-rest-spread": "6.19.0",
+    "babel-plugin-transform-es2015-arrow-functions": "6.22.0",
+    "babel-plugin-transform-es2015-block-scoped-functions": "6.22.0",
+    "babel-plugin-transform-es2015-block-scoping": "6.26.0",
+    "babel-plugin-transform-es2015-classes": "6.24.1",
+    "babel-plugin-transform-es2015-computed-properties": "6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "6.23.0",
+    "babel-plugin-transform-es2015-for-of": "6.23.0",
+    "babel-plugin-transform-es2015-function-name": "6.24.1",
+    "babel-plugin-transform-es2015-literals": "6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.26.2",
+    "babel-plugin-transform-es2015-object-super": "6.24.1",
+    "babel-plugin-transform-es2015-parameters": "6.24.1",
+    "babel-plugin-transform-es2015-shorthand-properties": "6.24.1",
+    "babel-plugin-transform-es2015-spread": "6.22.0",
+    "babel-plugin-transform-es2015-sticky-regex": "6.24.1",
+    "babel-plugin-transform-es2015-template-literals": "6.22.0",
+    "babel-plugin-transform-es2015-unicode-regex": "6.24.1",
+    "babel-plugin-transform-es3-member-expression-literals": "6.22.0",
+    "babel-plugin-transform-es3-property-literals": "6.22.0",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-register": "6.18.0",
-    "check-es3-syntax-cli": "0.1.3",
-    "webpack": "2.1.0-beta.15",
-    "json-loader": "0.5.4",
-    "rimraf": "2.3.4",
-    "cross-env": "1.0.7",
-    "hard-rejection": "^1.0.0",
-    "bignumber.js": "3.0.1",
-    "chai": "3.5.0",
-    "coveralls": "2.11.9",
-    "eslint": "2.10.1",
-    "eslint-config-airbnb": "9.0.1",
-    "eslint-import-resolver-webpack": "0.2.4",
-    "eslint-plugin-import": "1.8.0",
-    "eslint-plugin-jsx-a11y": "1.2.0",
-    "eslint-plugin-react": "5.1.1",
-    "ethjs-abi": "0.0.1",
-    "ganache-core": "^2.1.0",
+    "babel-register": "6.26.0",
+    "bignumber.js": "9.0.1",
+    "chai": "4.3.4",
+    "check-es3-syntax-cli": "0.2.1",
+    "coveralls": "3.1.1",
+    "cross-env": "7.0.3",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-import-resolver-webpack": "0.13.1",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.24.0",
+    "ethjs-abi": "0.2.1",
+    "ganache-core": "^2.13.2",
+    "hard-rejection": "^2.1.0",
     "istanbul": "0.4.5",
-    "lint-staged": "1.0.1",
-    "mocha": "3.2.0",
-    "pre-commit": "1.1.3"
-  },
-  "lint-staged": {
-    "lint:eslint": "*.js"
+    "json-loader": "0.5.7",
+    "lint-staged": "11.1.2",
+    "mocha": "9.1.0",
+    "pre-commit": "1.2.2",
+    "rimraf": "3.0.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.8.0"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
@@ -214,6 +212,5 @@
         "as-needed"
       ]
     }
-  },
-  "pre-commit": "build"
+  }
 }
